force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/clariti__Flow_Action_Button_Setting_Components__mdt.object-meta.xml
<CustomObject>
    <label>Flow Action Button Setting (Components)</label>
    <pluralLabel>Flow Action Button Settings (Components)</pluralLabel>
</CustomObject>