force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Flow_Action_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>clariti__Flow_Action_Button_Label__c</fullName>
    <description>The label that will show up in the action menu/button.</description>
    <label>Flow Action Button Label</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>