force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Flow_API_Name__c</fullName>
    <description>The API name of the flow you’re connecting to the action button of the table grouping (inline or nested) component</description>
    <label>Flow API Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>