force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Flow_Input_Variable_API_Name__c.field-meta.xml
<CustomField>
    <fullName>clariti__Flow_Input_Variable_API_Name__c</fullName>
    <label>Flow Input Variable API Name</label>
    <type>TextArea</type>
</CustomField>