force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Nested_Related_List_Setting__c.field-meta.xml
<CustomField>
    <fullName>clariti__Nested_Related_List_Setting__c</fullName>
    <description>Links this flow so the Nested Related List can use it.</description>
    <label>Nested Related List Setting</label>
    <referenceTo>clariti__Nested_Related_List_Setting__mdt</referenceTo>
    <relationshipLabel>Flow Action Button Settings (Components)</relationshipLabel>
    <relationshipName>Flow_Action_Button_Settings_Components</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>