force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Order__c.field-meta.xml
<CustomField>
    <fullName>clariti__Order__c</fullName>
    <description>Admins can set a display order value in CMDT for each flow, controlling the sequence of buttons shown in the interface. Lower display order values position buttons closer to the start</description>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>