force-app/main/default/objects/clariti__Flow_Action_Button_Setting_Components__mdt/fields/clariti__Supported_Objects__c.field-meta.xml
<CustomField>
    <fullName>clariti__Supported_Objects__c</fullName>
    <description>Admins can input a comma-separated list of object API names that the flow can operate on.</description>
    <label>Supported Objects</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>